Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10429

No closing button for failed SVN checkout on Mac

    XMLWordPrintable

Details

    • ea6c60cd1b7578fdd10f3135ad5361b787ac4c2f

    Description

      Steps to reproduce:

      • create an empty svn repository
      • check it out via 'New File or Project...' -> 'Import Project' -> 'Subversion Checkout'

      Current result:

      • as it's empty it succeeds to checkout but fails to open a project file (*.pro, *.cmake, ...)
      • all I got is the button for 'Show Details...'
      • on Linux you can close this dialog by hitting the X of the dialog, but on Mac the X is disabled

      Expected result:

      • either having a button to close this dialog (more preferable)
      • or having the X of the dialog enabled on Mac as well

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes