BaseCheckoutWizard: Add button to message box informing about failure

Add a "OK" button to the message box informing about a failure to find
any project file in the freshly checked out directory. That way the
user has a way to close the message box on Mac.

Task-number: QTCREATORBUG-10429
Change-Id: I9e1a4a2f368982dea2b0060f3f35dcb97d8936a3
Reviewed-by: Christian Stenger <christian.stenger@digia.com>